--- a/index.html
+++ b/index.html
@@ -214,15 +214,18 @@
     <div class="container" id="moreTradesCont">
       <div class="row">
         <div class="col-12">
-          <h1 style="font-family: Batman; margin-top:30px; font-size: 6vh">Done! Make Another Trade?</h1>
+          <h1 style="font-family: Batman; margin-top:30px; font-size: 6vh">Done!</h1>
         </div>
       </div>
       <div class="row text-center">
-        <div class="col-12">
+        <!-- <div class="col-12">
           <button onclick="instPressed()" class=" bttn-md bttn-success butt">YES</button>
         </div>
         <div class="col-12">
           <button onclick="skipTrade()" class=" bttn-md bttn-danger butt">NO</button>
+        </div> -->
+        <div class="col-12">
+          <button onclick="skipTrade()" class=" bttn-md bttn-danger butt">CONTINUE</button>
         </div>
       </div>
     </div>
@@ -604,7 +607,7 @@
 <script src="freeAgents2023.js"></script>
 <script src="draftTeams.js"></script>
 <script src="draftPlayers2023.js"></script>
-<script src="trades.js"></script>
+<script src="trades2023.js"></script>
 <script src="jets.js"></script>
 </body>
 </html>
