--- a/index.html
+++ b/index.html
@@ -569,6 +569,15 @@
           <div id="tradedAway" >
           </div>
         </div>
+        <div class="col-6 col-lg-3" id="extendedSection">
+          <div class="row">
+            <div class="col-12">
+              <p class="sumAddDrop" id="exHead">Extended</p>
+            </div>
+          </div>
+          <div id="extended" >
+          </div>
+        </div>
       <div class="row text-center" id="share">
         <div class="col-12">
           <p id="screenshot">Screenshot and Share</p>
