--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <h1 id="fixHead" class="slide-in-left2">BUILD OFF THE MOMENTUM.</h1>
+          <h1 id="fixHead" class="slide-in-left2">BUILD ON THE MOMENTUM.</h1>
         </div>
       </div>
       <hr>
@@ -250,6 +250,9 @@
   <div id="trans3" class="transition slide-in-left" >
   </div>
   <div  id="faCont" class="slide-in-left2">
+
+        <div id="restPop">TEST</div>
+
     <div class="container">
         <div class="row text-center" id="capBar">
           <div class="col-12">
@@ -344,7 +347,7 @@
 <div id="draftStartScreen">
   <div class="row text-center">
     <div class="col-12">
-      <img class="nflDraftLogo1" src="nflDraftLogo2022.png"></img>
+      <img class="nflDraftLogo1" src="draftLogo2023.png"></img>
     </div>
     <div class="col-12">
        <button id="draftScreenButton" onclick="draftPressed()" class=" bttn-md bttn-success butt">START DRAFT</button>
@@ -365,7 +368,7 @@
   <div class="container">
     <div class="row text-center">
       <div class="col-6 col-md-4">
-        <img class="nflDraftLogo" src="nflDraftLogo2022.png"></img>
+        <img class="nflDraftLogo" src="draftLogo2023.png"></img>
       </div>
       <div class="col-6 col-md-8">
         <p style="margin-top: 15px">ON THE CLOCK: </p>
