--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
         </div> -->
         <div class="col-12">
           <button onclick="skipTrade()" class=" bttn-md bttn-danger butt">CONTINUE</button>
+          <button onclick="generateTwoOffers(twoNav)" class=" bttn-md bttn-danger butt">BACK TO TRADES</button>
         </div>
       </div>
     </div>
@@ -618,7 +619,7 @@
 <script src="currRoster2023.js"></script>
 <script src="freeAgents2023.js"></script>
 <script src="draftTeams.js"></script>
-<script src="draftPlayers2023.js"></script>
+<script src="draftPlayers2023_2.js"></script>
 <script src="trades2023.js"></script>
 <script src="jets.js"></script>
 </body>
